@@ -1,3 +1,4 @@
+* Use between numbers in filter box
 * Rename email and calendar file
 * Use markup for styling
 * Replace ImageMenuItem by MenuItem
